@@ -1,3 +1,14 @@
+2021-06-04  Martin Robinson  <mrobinson@webkit.org>
+
+        The CMake cache is removed when specifying a build target
+        https://bugs.webkit.org/show_bug.cgi?id=226642
+
+        Reviewed by Jonathan Bedard.
+
+        * Scripts/webkitdirs.pm:
+        (shouldRemoveCMakeCache): Only remove the CMake cache when arguments
+        that start with a dash change.
+
 2021-06-04  Michael Catanzaro  <mcatanzaro@gnome.org>
 
         [GTK][WPE] Expose setCORSDisablingPatterns
